补充了一下全链接计算说明

--- a/test_data_gen.ipynb
+++ b/test_data_gen.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -278,14 +278,14 @@
      "output_type": "stream",
      "text": [
       "correct answer\n",
-      "[[8]\n",
-      " [5]\n",
-      " [3]]\n"
+      "[[8 6]\n",
+      " [5 4]\n",
+      " [3 2]]\n"
      ]
     }
    ],
    "source": [
-    "in_vec = np.array([[-1, -2, 1, 2, 3]]).T\n",
+    "in_vec = np.array([[-1, -2, 1, 2, 3], [-1, -2, 0, 2, 3]]).T\n",
     "weight = np.array([[2, 1, 2, 2, 2], [2, 2, 1, 2, 2], [2, 2, 1, 1, 2]], dtype=np.int32)\n",
     "\n",
     "print('correct answer')\n",
