把vec_matmul接口调通了

--- a/test_data_gen.ipynb
+++ b/test_data_gen.ipynb
@@ -314,22 +314,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2, 1, 2, 2, 2, 2, 2, 1, 2, 2, 2, 2, 1, 1, 2], dtype=int32)"
+       "array([2, 2, 2, 1, 2, 2, 2, 1, 1, 2, 2, 1, 2, 2, 2], dtype=int32)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "weight.reshape(-1)"
+    "weight.T.reshape(-1)"
    ]
   },
   {
@@ -490,6 +490,41 @@
     "output = torch.conv2d(in_vec, weight)\n",
     "\n",
     "output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 寻找量化参数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1717986918.4 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "scale = 0.05\n",
+    "multipler = 0\n",
+    "shift = 0\n",
+    "for i in range(31):\n",
+    "    temp = scale * 2**(i + 31)\n",
+    "    if temp < 2**31 - 1:\n",
+    "        multipler = temp\n",
+    "        shift = i\n",
+    "    else:\n",
+    "        break\n",
+    "\n",
+    "print(multipler, shift)"
    ]
   }
  ],
