--- a/test_data_gen.ipynb
+++ b/test_data_gen.ipynb
@@ -501,30 +501,264 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1717986918.4 4\n"
+      "0.0016950105554353221\n",
+      "1863683814 -9\n"
      ]
     }
    ],
    "source": [
-    "scale = 0.05\n",
+    "scale_input = 0.04273353889584541\n",
+    "scale_filter = 0.007862006314098835\n",
+    "scale_output = 0.19821195304393768\n",
+    "scale = scale_input * scale_filter / scale_output\n",
+    "print(scale)\n",
+    "\n",
     "multipler = 0\n",
     "shift = 0\n",
     "for i in range(31):\n",
     "    temp = scale * 2**(i + 31)\n",
     "    if temp < 2**31 - 1:\n",
-    "        multipler = temp\n",
+    "        multipler = int(temp)\n",
     "        shift = i\n",
     "    else:\n",
     "        break\n",
     "\n",
-    "print(multipler, shift)"
+    "print(multipler, -shift)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# C数组生成"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 读取npy权重和偏移并生成"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gen_content(pre_info, data: np.ndarray):\n",
+    "    content = pre_info + '[] = {'\n",
+    "    data = data.reshape(-1)\n",
+    "    for item in data:\n",
+    "        content += str(item) + ', '\n",
+    "\n",
+    "    content += '};\\n\\n'\n",
+    "    return content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_path = './5_cmsis_mlp/model/weights.h'\n",
+    "\n",
+    "config = [\n",
+    "    (\n",
+    "        'const q7_t filter_data_dense_1',\n",
+    "        './5_cmsis_mlp/model/mlp_1_sequential_1_dense_2_MatMul.npy'\n",
+    "    ),\n",
+    "    (\n",
+    "        'const q7_t filter_data_dense_2',\n",
+    "        './5_cmsis_mlp/model/mlp_1_sequential_1_dense_3_MatMul.npy'\n",
+    "    ),\n",
+    "    (\n",
+    "        'const int32_t bias_data_dense_1',\n",
+    "        './5_cmsis_mlp/model/dense_2_bias.npy'\n",
+    "    ),\n",
+    "    (\n",
+    "        'const int32_t bias_data_dense_2',\n",
+    "        './5_cmsis_mlp/model/dense_3_bias.npy'\n",
+    "    )\n",
+    "]\n",
+    "\n",
+    "with open(save_path, 'w+') as f:\n",
+    "    content = '#include \"arm_nnfunctions.h\"\\n\\n'\n",
+    "    for pre_info, data_path in config:\n",
+    "        content += gen_content(pre_info, np.load(data_path))\n",
+    "    f.write(content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 输入c数组生成"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mlp模型参数\n",
+    "input_scale = 0.003921568859368563\n",
+    "input_zero_point = -128"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_mnist(path):\n",
+    "    '''加载mnist数据\n",
+    "        输入:\n",
+    "            path: mnist.npz的路径\n",
+    "    '''\n",
+    "\n",
+    "    with np.load(path, allow_pickle=True) as f:\n",
+    "        x_train, y_train = f['x_train'], f['y_train']\n",
+    "        x_test, y_test = f['x_test'], f['y_test']\n",
+    "\n",
+    "        return (x_train, y_train), (x_test, y_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(x_train, y_train), (x_test, y_test) = load_mnist('data/mnist/mnist.npz')\n",
+    "x_test = x_test / 255.\n",
+    "# 对输入数据进行量化处理\n",
+    "x_test = x_test / input_scale + input_zero_point\n",
+    "\n",
+    "x_test = x_test.round().astype(np.int8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gen_content(pre_info, data: np.ndarray):\n",
+    "    content = pre_info + '{'\n",
+    "    data = data.reshape(-1)\n",
+    "    for item in data:\n",
+    "        content += str(item) + ', '\n",
+    "\n",
+    "    content += '}\\n\\n'\n",
+    "    return content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "save_path = './5_cmsis_mlp/model/inputs.h'\n",
+    "\n",
+    "with open(save_path, 'w+') as f:\n",
+    "    content = gen_content('#define INPUT_DATA ', x_test[0])\n",
+    "    f.write(content)\n",
+    "\n",
+    "print(y_test[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 数据对比"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. 使用tiny_network生成真实输出\n",
+    "2. 在串口中设置保存到log，捕获stm32的输出"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 加载txt文件并对比结果(单层)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-13 -18  19  31 -44 -13 -44  77   7  12]\n",
+      "[-12 -18  18  31 -43 -12 -42  76   8  11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "input_data = np.loadtxt('./5_cmsis_mlp/model/cmp/output_dense_1.txt', dtype=np.int64)\n",
+    "input_data_stm32 = np.loadtxt('./5_cmsis_mlp/model/cmp/output_dense_1_stm32.txt', dtype=np.int64)\n",
+    "\n",
+    "weight = np.load('./5_cmsis_mlp/model/mlp_1_sequential_1_dense_3_MatMul.npy')\n",
+    "bias = np.load('./5_cmsis_mlp/model/dense_3_bias.npy')\n",
+    "weight = weight.astype(np.int64)\n",
+    "bias = bias.astype(np.int64)\n",
+    "\n",
+    "input_zero_point = 128\n",
+    "multipler = 1863683814\n",
+    "shift = -9\n",
+    "output_zero_point = 21\n",
+    "\n",
+    "correct = np.matmul(input_data + input_zero_point, weight.T) + bias\n",
+    "correct = correct * multipler / 2**(31 + (-shift))\n",
+    "correct += output_zero_point\n",
+    "correct = np.clip(correct, -128, 127).astype(np.int32)\n",
+    "print(correct)\n",
+    "\n",
+    "stm32_val = np.matmul(input_data_stm32 + input_zero_point, weight.T) + bias\n",
+    "stm32_val = stm32_val * multipler / 2**(31 + (-shift))\n",
+    "stm32_val += output_zero_point\n",
+    "stm32_val = np.clip(stm32_val, -128, 127).astype(np.int32)\n",
+    "print(stm32_val)"
    ]
   }
  ],
